PARKER IS THE BEST

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -17,7 +17,7 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-12">
-								<form method="post" action="/AJsExpenseReporting/login.change">
+								<form method="post" action="/0AJsERS/login.change">
 									<p>Please log in, arigato!</p>
 									<input placeholder="enter username" name="username" /><br>
 									<input placeholder="enter password" name="password" /><br>
