--- a/src/main/webapp/html/submitSuccess.html
+++ b/src/main/webapp/html/submitSuccess.html
@@ -15,7 +15,7 @@
     <div class="container">
       <h1>Thank you!</h1>
       <h3>Your expense reimbursement report has been submitted!</h3>
-      <button><a href="EmployeeHome.html">Submit Again</a></button>
+      <a href="/0AJsERS/home.home">Submit Again</a>
     </div>
 
     <script
