everything works and some of it is pretty

--- a/src/main/webapp/html/EmployeeHome.html
+++ b/src/main/webapp/html/EmployeeHome.html
@@ -9,14 +9,14 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../css/employeeStyle.css" />
   </head>
   <body>
     <div class="container">
       <div class="title">
-        <h3>
-          Please fill out the form below in order to submit your expense ticket.
-        </h3>
+        <h2>
+          Fill out the form below to submit your expense ticket.
+        </h2>
       </div>
       <form class="" id="TypeForm" method="POST" action="home.home">
         <div class="dropdown">
