--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -9,20 +9,50 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../css/loginStyle.css" />
   </head>
   <body>
-    <div class="container">
-    <div class="title">
-    <h3>Welcome to the Time Bureau's Expense Reimbursement System!</h3>
-    </div>
-    <div class="container">
-      <form method="post" action="/0AJsERS/login.change">
-        <p>Please log in, Legend!</p>
-        <input placeholder="enter username" name="username" /><br />
-        <input placeholder="enter password" name="password" /><br />
-        <input type="submit" value="Login" />
-      </form>
+    <div class="pageBody">
+      <nav class="navbar navbar-expand-lg navbar-dark" style="height: 50px;">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav"></ul>
+        </div>
+      </nav>
+      <div class="container">
+        <div class="title" id="LoginWelcome">
+          <h1>Welcome to the Time Bureau's</h1>
+          <h1>Expense Reimbursement System!</h1>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+              <div class="panel panel-login">
+                <div class="panel-body">
+                  <div class="row">
+                    <div class="col-lg-12 center-block">
+                      <form
+                        class="justify-content-center"
+                        method="post"
+                        action="/0AJsERS/login.change"
+                      >
+                        <p>Please log in, Legend!</p>
+                        <input
+                          placeholder="enter username"
+                          name="username"
+                        /><br />
+                        <input
+                          placeholder="enter password"
+                          name="password"
+                        /><br />
+                        <input type="submit" value="Login" />
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
