now it works AND its pretty

--- a/src/main/webapp/html/submitSuccess.html
+++ b/src/main/webapp/html/submitSuccess.html
@@ -9,13 +9,20 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../0AJsERS/css/thanksStyle.css"
+    />
   </head>
   <body>
     <div class="container">
-      <h1>Thank you!</h1>
-      <h3>Your expense reimbursement report has been submitted!</h3>
-      <a href="/0AJsERS/home.home">Submit Again</a>
+      <h1>Thank you, Legend!</h1>
+      <h3>
+        Your expense reimbursement report has been to Director Ava Sharpe for
+        approval!
+      </h3>
+      <a href="/0AJsERS/home.home">Submit Another Expense</a>
     </div>
 
     <script
