--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -9,18 +9,18 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="../css/loginStyle.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../0AJsERS/css/loginStyle.css"
+    />
   </head>
   <body>
     <div class="pageBody">
-      <nav class="navbar navbar-expand-lg navbar-dark" style="height: 50px;">
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav"></ul>
-        </div>
-      </nav>
       <div class="container">
         <div class="title" id="LoginWelcome">
-          <h1>Welcome to the Time Bureau's</h1>
+          <h1 id="firstH1">Welcome to</h1>
+          <h1>The Time Bureau's</h1>
           <h1>Expense Reimbursement System!</h1>
         </div>
         <div class="container">
